Added login controller + form

--- a/src/SWP/FrontendBundle/Resources/views/layout.html.twig
+++ b/src/SWP/FrontendBundle/Resources/views/layout.html.twig
@@ -4,9 +4,9 @@
         <!-- start: Meta -->
         <meta charset="utf-8" />
         <title>SweetLakePHP - {% block title %}{% endblock %}</title>
-        <meta name="description" content="Gravis Bootstrap Theme" />
-        <meta name="keywords" content="Template, Theme, web, html5, css3, Bootstrap" />
-        <meta name="author" content="Łukasz Holeczek from creativeLabs" />
+        <meta name="description" content="SweetLakePHP - User community" />
+        <meta name="keywords" content="sweetlakephp" />
+        <meta name="author" content="SweetLakePHP member's" />
         <!-- end: Meta -->
 
         <!-- start: Mobile Specific -->
